--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@eva-design/eva": "^2.0.0",
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "^1.12.0",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "@ui-kitten/components": "^5.0.0",
